[gd_scene load_steps=4 format=2]

[ext_resource path="res://elements/AIView.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=2]
radius = 565.022

[sub_resource type="CircleShape2D" id=1]
radius = 347.013

[node name="AIView" type="Node2D"]
script = ExtResource( 1 )

[node name="PlayerEscapeZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerEscapeZone"]
shape = SubResource( 2 )

[node name="PlayerTooCloseZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerTooCloseZone"]
shape = SubResource( 1 )

[connection signal="body_entered" from="PlayerEscapeZone" to="." method="_on_PlayerEscapeZone_body_entered"]
[connection signal="body_exited" from="PlayerEscapeZone" to="." method="_on_PlayerEscapeZone_body_exited"]
[connection signal="body_entered" from="PlayerTooCloseZone" to="." method="_on_PlayerTooCloseZone_body_entered"]
